--- a/SharedComponents/_Imports.razor
+++ b/SharedComponents/_Imports.razor
@@ -3,3 +3,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Data.Models.Interfaces
 @using Data.Models
+@using SharedComponents
+@using SharedComponents.ReusableComponents
+@using Microsoft.AspNetCore.Components.Forms
