--- a/Blazor.Blog/Components/_Imports.razor
+++ b/Blazor.Blog/Components/_Imports.razor
@@ -9,3 +9,6 @@
 @using Blazor.Blog
 @using Blazor.Blog.Client
 @using Blazor.Blog.Components
+@using Blazor.Blog.Components.Layout
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
