--- a/SharedComponents/Pages/Admin/CategoryList.razor
+++ b/SharedComponents/Pages/Admin/CategoryList.razor
@@ -2,6 +2,7 @@
 @rendermode InteractiveServer 
 @using SharedComponents.ReusableComponents 
 @inject IBlogApi _api 
+@attribute [Authorize]
 
 <h3>Categories</h3>
 
