--- a/SharedComponents/_Imports.razor
+++ b/SharedComponents/_Imports.razor
@@ -6,3 +6,4 @@
 @using SharedComponents
 @using SharedComponents.ReusableComponents
 @using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Authorization
