--- a/Blazor.Blog.Client/_Imports.razor
+++ b/Blazor.Blog.Client/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Blazor.Blog.Client
+@using Microsoft.AspNetCore.Authorization
