--- a/Blazor.Blog/Components/Layout/MainLayout.razor
+++ b/Blazor.Blog/Components/Layout/MainLayout.razor
@@ -1,13 +1,15 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
+    <AuthorizeView Roles="Administrator">
     <div class="sidebar">
         <NavMenu />
     </div>
+    </AuthorizeView>
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <LoginStatus />
         </div>
 
         <article class="content px-4">
