--- a/Blazor.Blog/Components/Routes.razor
+++ b/Blazor.Blog/Components/Routes.razor
@@ -1,6 +1,20 @@
-﻿<Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly,typeof(SharedComponents.Pages.Home).Assembly }">
+﻿ <Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly,typeof(SharedComponents.Pages.Home).Assembly }">
     <Found Context="routeData">
-        <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
-        <FocusOnNavigate RouteData="routeData" Selector="h1" />
+        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+            <Authorizing>
+            <p>Determining session state, please wait...</p>
+            </Authorizing>
+        <NotAuthorized>
+            <h1>Sorry</h1>
+            <p>You're not authorized to reach this page. You need to log in.</p>
+        </NotAuthorized>
+        </AuthorizeRouteView>
+    <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
+<NotFound>
+    <PageTitle>Not found</PageTitle>
+    <LayoutView Layout="@typeof(MainLayout)">
+        <p role="alert">Sorry, there's nothing at this address.</p>
+    </LayoutView>
+</NotFound>
 </Router>
