Added Sharing Code and Resources

--- a/Blazor.Blog/Components/Layout/NavMenu.razor
+++ b/Blazor.Blog/Components/Layout/NavMenu.razor
@@ -22,8 +22,23 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Admin/Blogposts">
+                <span class="bi bi-plus-square-fill-nav-menu" ariahidden="true"></span> Blog posts
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Admin/Tags">
+                <span class="bi bi-plus-square-fill-nav-menu" ariahidden="true"></span> Tags
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Admin/Categories">
+                <span class="bi bi-plus-square-fill-nav-menu" ariahidden="true"></span> Categories
+            </NavLink>
+        </div>
+
+       @*  <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
@@ -33,7 +48,7 @@
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
-        </div>
+        </div> *@
     </nav>
 </div>
 
