--- a/SharedComponents/Pages/Home.razor
+++ b/SharedComponents/Pages/Home.razor
@@ -2,17 +2,31 @@
 @rendermode InteractiveServer
 @using Data.Models
 @using Data.Models.Interfaces
+@using Markdig;
 <h3>Blog Home Page</h3>
 @inject IBlogApi _api
-<ul>
     <Virtualize ItemsProvider="LoadPosts" Context="p">
-        <li><a href="/Post/@p.Id">@p.Title</a></li>
+        @* <li><a href="/Post/@p.Id">@p.Title</a></li> *@
+
+        <article>
+            <h2>@p.Title</h2>
+            @((MarkupString)Markdig.Markdown.ToHtml(new string(p.Text.
+                Take(100).ToArray()), pipeline))
+            <a href="/Post/@p.Id">Read more</a>
+        </article>
+
     </Virtualize>
-</ul>
 @code {
     public int totalBlogposts { get; set; }
-    private async ValueTask<ItemsProviderResult<BlogPost>>
-    LoadPosts(ItemsProviderRequest request)
+    MarkdownPipeline pipeline;
+    protected override Task OnInitializedAsync()
+    {
+        pipeline = new MarkdownPipelineBuilder()
+        .UseEmojiAndSmiley()
+        .Build();
+        return base.OnInitializedAsync();
+    }
+    private async ValueTask<ItemsProviderResult<BlogPost>> LoadPosts(ItemsProviderRequest request)
     {
         if (totalBlogposts == 0)
         {
